[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-monitor-agent"
version = "0.1.0"
description = "Monitors regulatory feeds and alerts on changes affecting products."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/compliance-monitor-agent"
Issues = "https://github.com/erron-ai/compliance-monitor-agent/issues"

[project.scripts]
compliance-monitor-agent = "compliance_monitor_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
